--- a/templates/order.html
+++ b/templates/order.html
@@ -12,13 +12,13 @@
       </tr>
       </thead>
   <tbody>
-  {% for Order in orders %}
+  {% for order in orders %}
     <tr>
-      <td>{{Order.order_id}}</td>
-      <td>{{Order.order_date}}</td>
-      <td>{{Order.cust_id}}</td>
-        <td><a class="btn btn-danger" href="{{ url_for('remove_order', order_id=Order['order_id']) }}" role="button">Удалить</a></td>
-        <td><a class="btn btn-success" href="{{ url_for('update_order', order_id=Order['order_id']) }}" role="button">Обновить</a></td>
+      <td>{{order.order_id}}</td>
+      <td>{{order.order_date}}</td>
+      <td>{{order.cust_id}}</td>
+        <td><a class="btn btn-danger" href="{{ url_for('remove_order', order_id=order['order_id']) }}" role="button">Удалить</a></td>
+        <td><a class="btn btn-success" href="{{ url_for('update_order', order_id=order['order_id']) }}" role="button">Обновить</a></td>
     </tr>
   {% endfor %}
   </tbody>
